# tech0-gen10-step4-pos_hase

./: .gitignore  .npmrc  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  main_app-002-gen10-step3-1-node-oshima5.yml.old  main_app-002-gen10-step3-1-py-oshima5.yml
LV3/: README.md  docker-compose.yml
LV3/backend/: .env.example  .gitignore  Dockerfile  alembic.ini  app.py  create_db.py  create_db_local.py  database.py  pyproject.toml  pytest.ini
LV3/backend/migrations/: env.py  script.py.mako
LV3/backend/migrations/versions/: 0001_initial_schema.py  8bfbd45359dd_products_local_products_jan主キー化.py
LV3/backend/tests/: README.md  conftest.py  test_api_products.py  test_api_purchases.py  test_constraints.py  test_models.py
LV3/frontend/: Dockerfile  package.json  pnpm-lock.yaml
LV3/frontend/src/: middleware.ts
LV3/frontend/src/app/: globals.css  page.tsx
LV3/frontend/src/components/: BarcodeScanner.tsx  BarcodeScannerDiagnostics.tsx  BarcodeScannerZxing.tsx  Checkout.tsx  Header.tsx  (+2 more)
LV3/public/docs/: 00_Project_Overview.md  01_Functional_Requirements.md  02_API_Specification.md  03_Database_Schema.md  04_Customer_Value_Proposition.md  04_en-Customer_Value_Proposition.md  05_Secure_Azure_Architecture.md
debug/: .gitignore
debug/barcode_generator/: barcodes.csv  barcodes_fixed.csv  barcodes_original.csv  fix_jan_codes.py  generate_barcodes.py  main.py  pyproject.toml
terraform/: .terraform.lock.hcl  architechture.md  main.tf  outputs.tf  variables.tf  versions.tf
(+9 files in other folders)
